--- a/GraphicsMath/imgui.ini
+++ b/GraphicsMath/imgui.ini
@@ -9,9 +9,37 @@ Size=339,180
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=596,20
+Pos=584,41
 Size=550,680
+Collapsed=1
+
+[Window][Cube Transform]
+Pos=7,271
+Size=284,134
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Config]
+Pos=7,407
+Size=284,58
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Camera]
+Pos=7,170
+Size=284,99
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Temp]
+Pos=60,60
+Size=205,96
 Collapsed=0
 
 [Docking][Data]
+DockNode      ID=0x00000002 Pos=85,210 Size=284,295 Split=Y
+  DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=294,84 Selected=0x3CB0EB33
+  DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=294,165 Split=Y Selected=0xF245B8E7
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=294,134 Selected=0xF245B8E7
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=294,58 Selected=0xD3262A4A
 
